# air2

./: Cargo.toml
.cargo/: config
migrations/2022-01-05-102152_create_items_table/: up.sql
migrations/2022-01-06-085303_create_histories_table/: up.sql
migrations/2022-01-08-235415_create_categories_table/: up.sql
migrations/2022-01-08-235424_create_items_table/: up.sql
migrations/2022-01-10-031751_create_logs_table/: up.sql
src/: amazon_browser.rs  business.rs  category.rs  history.rs  item.rs  log.rs  main.rs  schema.rs  ui.rs  utils.rs
