[package]
name = "air2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
diesel = { version = "1.4.8", features = ["mysql"] }
dotenv = "0.15.0"
iced = { version = "0.3.0", features = ["tokio"] }
rstest = "0.12.0"
tokio = "1.15.0"
transaction = "0.2.1"
amazon-log = { git = "https://github.com/kano1101/amazon-log.git" }
range = { git = "https://github.com/kano1101/range.git" }
transaction-diesel-mysql = { git = "https://github.com/kano1101/transaction-diesel-mysql.git" }
mdo = "0.3.0"
